# quotemakers-ops-desk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  flake.nix
api/: Cargo.toml
api/src/: main.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  styles.css
db/migrations/: 001_init.sql  002_site_inventory_and_checks.sql
db/rules/: suspicious_quotes.sql
db/seeds/: 001_seed.sql  current_railway_sites.sql
docs/: architecture.md  friday-plan.md  railway-sync-and-checks.md  rust-api-notes.md
scripts/: start.sh
