[package]
name = "quotemakers-ops-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "time"] }
tower-http = { version = "0.6", features = ["fs"] }
